examples/passing/s.purs
module S where

  s = \x y z -> x z (y z)
